--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,68 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+.header {
+  text-align: center;
+    background: #05876a;
+    padding: 20px;
+    color: #fff;
+    font-size: 26px;
+}
+.footer {
+  background: #ddd;
+  text-align: center;
+  padding: 20px;
+  font-size: 26px;
+}
+tr{
+  border-bottom: 1px solid #ddd;
+}
+td{
+  padding: 10px;
+}
+.add_btn{
+  background: rgb(3, 135, 106);
+  color: #fff;
+  padding: 11px 10px;
+  border-radius: 5px;
+  margin-left: 10px;
+}
+
+.delete_btn{
+  background: #d30000;
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
+
+.update_btn{
+  background: rgb(3, 135, 106);
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
+.edit_btn{
+  color: #fff;
+  background: #ab7e02;
+  border-radius: 5px;
+  padding: 11px 10px;
+  margin-left: 10px;
+}
+.newcontainer{
+  padding: 20px;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 10px;
+
+}
+.productbox{
+    border: 1px solid #ddd;
+    text-align: center;
+    padding: 20px 0;
+    background: #ededed;
+    border-radius: 16px;
+}
+.productbox img {
+  display: block;
+  margin: 0 auto;
+}
